examples/test/testpolicy9565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9565
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key46: value42
      key24: value16
      key45: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value44
      podSelector:
        matchLabels:
          key1: value23
          key43: value37
